{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 2061,
  "lineage": "5fbe98b7-c82e-b828-7bc4-69c76b815ccf",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_lb",
      "name": "data_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/myTFPublicIP"
              }
            ],
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "location": "westeurope",
            "name": "Public_LoadBalancer",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_lb",
      "name": "private_data_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/frontendIPConfigurations/PrivateIPAddress",
                "name": "PrivateIPAddress",
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1"
              }
            ],
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "location": "westeurope",
            "name": "Private_LoadBalancer",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_lb_backend_address_pool",
      "name": "data_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "BackEndAddressPool"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_lb_backend_address_pool",
      "name": "private_data_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "name": "PrivateBackEndAddressPool"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/myTFPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.236.176.119",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myTFPublicIP",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "data_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "f62edf28-c16a-49b4-9c27-945218895eed",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet",
            "location": "westeurope",
            "name": "myTFVnet",
            "resource_group_name": "myTFResourceGroup"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "privateLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/frontendIPConfigurations/PrivateIPAddress",
                "name": "PrivateIPAddress",
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1"
              }
            ],
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "location": "westeurope",
            "name": "Private_LoadBalancer",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "publicLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/myTFPublicIP"
              }
            ],
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "location": "westeurope",
            "name": "Public_LoadBalancer",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "name": "PrivateBackEndAddressPool",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "lb_nat_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/frontendIPConfigurations/PrivateIPAddress",
            "frontend_ip_configuration_name": "PrivateIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/inboundNatRules/SSHAccess",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "name": "SSHAccess",
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/probes/tcpProbe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/probes/tcpProbeSsh",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "tcpProbeSsh",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "private_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/probes/tcpProbe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 5432,
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LB_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "LBRule",
            "probe_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/probes/tcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LB_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/loadBalancingRules/LBRuleSSH",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "LBRuleSSH",
            "probe_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/probes/tcpProbeSsh",
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_lb_probe.lb_probe_ssh",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LB_rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/loadBalancingRules/LBRule3",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer",
            "name": "LBRule3",
            "probe_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/probes/tcpProbeSsh",
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_lb_probe.lb_probe_ssh",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "private_LB_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "backend_port": 5432,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/frontendIPConfigurations/PrivateIPAddress",
            "frontend_ip_configuration_name": "PrivateIPAddress",
            "frontend_port": 5432,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/loadBalancingRules/private_LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer",
            "name": "private_LBRule",
            "probe_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/probes/tcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_private",
            "azurerm_lb_probe.private_lb_probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "myNIC",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC2",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg2",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "myNIC2",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC3",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg3",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "myNIC3",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg-private",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "Private_myNIC",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC2",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg2-private",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "Private_myNIC2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC3",
            "internal_domain_name_suffix": "fdps33tkyg0ethbhsrjbrck43f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfg3-private",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "Private_myNIC3",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic2_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC2/ipConfigurations/myNICConfg2|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "myNICConfg2",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC2"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_network_interface.nic2",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic3_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC3/ipConfigurations/myNICConfg3|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "myNICConfg3",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC3"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_network_interface.nic3",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC/ipConfigurations/myNICConfg|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Public_LoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "myNICConfg",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC"
          },
          "dependencies": [
            "azurerm_lb.publicLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_public",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "private_nic2_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC2/ipConfigurations/myNICConfg2-private|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "ip_configuration_name": "myNICConfg2-private",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC2"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_private",
            "azurerm_network_interface.private_nic2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "private_nic3_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC3/ipConfigurations/myNICConfg3-private|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "ip_configuration_name": "myNICConfg3-private",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC3"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_private",
            "azurerm_network_interface.private_nic3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "private_nic_back_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC/ipConfigurations/myNICConfg-private|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/Private_LoadBalancer/backendAddressPools/PrivateBackEndAddressPool",
            "ip_configuration_name": "myNICConfg-private",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC"
          },
          "dependencies": [
            "azurerm_lb.privateLB",
            "azurerm_lb_backend_address_pool.backend_address_pool_private",
            "azurerm_network_interface.private_nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC2|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC2",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC3|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC3",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.nic3",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "private_nsg_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.private_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "private_nsg_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC2|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC2",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.private_nic2",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "private_nsg_nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC3|/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG",
            "network_interface_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/Private_myNIC3",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG"
          },
          "dependencies": [
            "azurerm_network_interface.private_nic3",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG",
            "location": "westeurope",
            "name": "myTFNSG",
            "resource_group_name": "myTFResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "WEB",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_8080",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Port-8080",
                "priority": 360,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/private_myTFNSG",
            "location": "westeurope",
            "name": "private_myTFNSG",
            "resource_group_name": "myTFResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH2",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Postgres",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/myTFPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.236.176.119",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myTFPublicIP",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1",
            "name": "Subnet-1",
            "resource_group_name": "myTFResourceGroup",
            "virtual_network_name": "myTFVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Private-Subnet-1",
            "name": "Private-Subnet-1",
            "resource_group_name": "myTFResourceGroup",
            "virtual_network_name": "myTFVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1",
            "network_security_group_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/myTFNSG",
            "subnet_id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet/subnets/Subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "f62edf28-c16a-49b4-9c27-945218895eed",
            "id": "/subscriptions/c671a80f-4913-43d3-9c4f-8b802dce0f93/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/myTFVnet",
            "location": "westeurope",
            "name": "myTFVnet",
            "resource_group_name": "myTFResourceGroup",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}